utils/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> events
Rule 1     events -> <empty>
Rule 2     events -> events event
Rule 3     event -> optdir SYMBOL optargs optsubs
Rule 4     optdir -> <empty>
Rule 5     optdir -> GT
Rule 6     optdir -> LT
Rule 7     optsubs -> <empty>
Rule 8     optsubs -> SEMI
Rule 9     optsubs -> LCB events RCB
Rule 10    value -> SYMBOL
Rule 11    value -> SYMBOL LPAREN list RPAREN
Rule 12    list -> value
Rule 13    list -> list COMMA value
Rule 14    value -> LBR RBR
Rule 15    value -> LBR list RBR
Rule 16    dict -> SYMBOL COLON value
Rule 17    dict -> dict COMMA SYMBOL COLON value
Rule 18    value -> LCB RCB
Rule 19    value -> LCB dict RCB
Rule 20    optargs -> <empty>
Rule 21    optargs -> LPAREN list RPAREN

Terminals, with rules where they appear

COLON                : 16 17
COMMA                : 13 17
GT                   : 5
LBR                  : 14 15
LCB                  : 9 18 19
LPAREN               : 11 21
LT                   : 6
RBR                  : 14 15
RCB                  : 9 18 19
RPAREN               : 11 21
SEMI                 : 8
SYMBOL               : 3 10 11 16 17
error                : 

Nonterminals, with rules where they appear

dict                 : 17 19
event                : 2
events               : 2 9 0
list                 : 11 13 15 21
optargs              : 3
optdir               : 3
optsubs              : 3
value                : 12 13 16 17

Parsing method: LALR

state 0

    (0) S' -> . events
    (1) events -> .
    (2) events -> . events event

    GT              reduce using rule 1 (events -> .)
    LT              reduce using rule 1 (events -> .)
    $end            reduce using rule 1 (events -> .)
    SYMBOL          reduce using rule 1 (events -> .)

    events                         shift and go to state 1

state 1

    (0) S' -> events .
    (2) events -> events . event
    (3) event -> . optdir SYMBOL optargs optsubs
    (4) optdir -> .
    (5) optdir -> . GT
    (6) optdir -> . LT

    SYMBOL          reduce using rule 4 (optdir -> .)
    GT              shift and go to state 4
    LT              shift and go to state 5

    event                          shift and go to state 2
    optdir                         shift and go to state 3

state 2

    (2) events -> events event .

    GT              reduce using rule 2 (events -> events event .)
    LT              reduce using rule 2 (events -> events event .)
    $end            reduce using rule 2 (events -> events event .)
    SYMBOL          reduce using rule 2 (events -> events event .)
    RCB             reduce using rule 2 (events -> events event .)


state 3

    (3) event -> optdir . SYMBOL optargs optsubs

    SYMBOL          shift and go to state 6


state 4

    (5) optdir -> GT .

    SYMBOL          reduce using rule 5 (optdir -> GT .)


state 5

    (6) optdir -> LT .

    SYMBOL          reduce using rule 6 (optdir -> LT .)


state 6

    (3) event -> optdir SYMBOL . optargs optsubs
    (20) optargs -> .
    (21) optargs -> . LPAREN list RPAREN

    SEMI            reduce using rule 20 (optargs -> .)
    LCB             reduce using rule 20 (optargs -> .)
    GT              reduce using rule 20 (optargs -> .)
    LT              reduce using rule 20 (optargs -> .)
    $end            reduce using rule 20 (optargs -> .)
    SYMBOL          reduce using rule 20 (optargs -> .)
    RCB             reduce using rule 20 (optargs -> .)
    LPAREN          shift and go to state 8

    optargs                        shift and go to state 7

state 7

    (3) event -> optdir SYMBOL optargs . optsubs
    (7) optsubs -> .
    (8) optsubs -> . SEMI
    (9) optsubs -> . LCB events RCB

    GT              reduce using rule 7 (optsubs -> .)
    LT              reduce using rule 7 (optsubs -> .)
    $end            reduce using rule 7 (optsubs -> .)
    SYMBOL          reduce using rule 7 (optsubs -> .)
    RCB             reduce using rule 7 (optsubs -> .)
    SEMI            shift and go to state 10
    LCB             shift and go to state 11

    optsubs                        shift and go to state 9

state 8

    (21) optargs -> LPAREN . list RPAREN
    (12) list -> . value
    (13) list -> . list COMMA value
    (10) value -> . SYMBOL
    (11) value -> . SYMBOL LPAREN list RPAREN
    (14) value -> . LBR RBR
    (15) value -> . LBR list RBR
    (18) value -> . LCB RCB
    (19) value -> . LCB dict RCB

    SYMBOL          shift and go to state 14
    LBR             shift and go to state 15
    LCB             shift and go to state 16

    list                           shift and go to state 12
    value                          shift and go to state 13

state 9

    (3) event -> optdir SYMBOL optargs optsubs .

    GT              reduce using rule 3 (event -> optdir SYMBOL optargs optsubs .)
    LT              reduce using rule 3 (event -> optdir SYMBOL optargs optsubs .)
    $end            reduce using rule 3 (event -> optdir SYMBOL optargs optsubs .)
    SYMBOL          reduce using rule 3 (event -> optdir SYMBOL optargs optsubs .)
    RCB             reduce using rule 3 (event -> optdir SYMBOL optargs optsubs .)


state 10

    (8) optsubs -> SEMI .

    GT              reduce using rule 8 (optsubs -> SEMI .)
    LT              reduce using rule 8 (optsubs -> SEMI .)
    $end            reduce using rule 8 (optsubs -> SEMI .)
    SYMBOL          reduce using rule 8 (optsubs -> SEMI .)
    RCB             reduce using rule 8 (optsubs -> SEMI .)


state 11

    (9) optsubs -> LCB . events RCB
    (1) events -> .
    (2) events -> . events event

    RCB             reduce using rule 1 (events -> .)
    GT              reduce using rule 1 (events -> .)
    LT              reduce using rule 1 (events -> .)
    SYMBOL          reduce using rule 1 (events -> .)

    events                         shift and go to state 17

state 12

    (21) optargs -> LPAREN list . RPAREN
    (13) list -> list . COMMA value

    RPAREN          shift and go to state 18
    COMMA           shift and go to state 19


state 13

    (12) list -> value .

    RPAREN          reduce using rule 12 (list -> value .)
    COMMA           reduce using rule 12 (list -> value .)
    RBR             reduce using rule 12 (list -> value .)


state 14

    (10) value -> SYMBOL .
    (11) value -> SYMBOL . LPAREN list RPAREN

    RPAREN          reduce using rule 10 (value -> SYMBOL .)
    COMMA           reduce using rule 10 (value -> SYMBOL .)
    RBR             reduce using rule 10 (value -> SYMBOL .)
    RCB             reduce using rule 10 (value -> SYMBOL .)
    LPAREN          shift and go to state 20


state 15

    (14) value -> LBR . RBR
    (15) value -> LBR . list RBR
    (12) list -> . value
    (13) list -> . list COMMA value
    (10) value -> . SYMBOL
    (11) value -> . SYMBOL LPAREN list RPAREN
    (14) value -> . LBR RBR
    (15) value -> . LBR list RBR
    (18) value -> . LCB RCB
    (19) value -> . LCB dict RCB

    RBR             shift and go to state 21
    SYMBOL          shift and go to state 14
    LBR             shift and go to state 15
    LCB             shift and go to state 16

    list                           shift and go to state 22
    value                          shift and go to state 13

state 16

    (18) value -> LCB . RCB
    (19) value -> LCB . dict RCB
    (16) dict -> . SYMBOL COLON value
    (17) dict -> . dict COMMA SYMBOL COLON value

    RCB             shift and go to state 23
    SYMBOL          shift and go to state 25

    dict                           shift and go to state 24

state 17

    (9) optsubs -> LCB events . RCB
    (2) events -> events . event
    (3) event -> . optdir SYMBOL optargs optsubs
    (4) optdir -> .
    (5) optdir -> . GT
    (6) optdir -> . LT

    RCB             shift and go to state 26
    SYMBOL          reduce using rule 4 (optdir -> .)
    GT              shift and go to state 4
    LT              shift and go to state 5

    event                          shift and go to state 2
    optdir                         shift and go to state 3

state 18

    (21) optargs -> LPAREN list RPAREN .

    SEMI            reduce using rule 21 (optargs -> LPAREN list RPAREN .)
    LCB             reduce using rule 21 (optargs -> LPAREN list RPAREN .)
    GT              reduce using rule 21 (optargs -> LPAREN list RPAREN .)
    LT              reduce using rule 21 (optargs -> LPAREN list RPAREN .)
    $end            reduce using rule 21 (optargs -> LPAREN list RPAREN .)
    SYMBOL          reduce using rule 21 (optargs -> LPAREN list RPAREN .)
    RCB             reduce using rule 21 (optargs -> LPAREN list RPAREN .)


state 19

    (13) list -> list COMMA . value
    (10) value -> . SYMBOL
    (11) value -> . SYMBOL LPAREN list RPAREN
    (14) value -> . LBR RBR
    (15) value -> . LBR list RBR
    (18) value -> . LCB RCB
    (19) value -> . LCB dict RCB

    SYMBOL          shift and go to state 14
    LBR             shift and go to state 15
    LCB             shift and go to state 16

    value                          shift and go to state 27

state 20

    (11) value -> SYMBOL LPAREN . list RPAREN
    (12) list -> . value
    (13) list -> . list COMMA value
    (10) value -> . SYMBOL
    (11) value -> . SYMBOL LPAREN list RPAREN
    (14) value -> . LBR RBR
    (15) value -> . LBR list RBR
    (18) value -> . LCB RCB
    (19) value -> . LCB dict RCB

    SYMBOL          shift and go to state 14
    LBR             shift and go to state 15
    LCB             shift and go to state 16

    list                           shift and go to state 28
    value                          shift and go to state 13

state 21

    (14) value -> LBR RBR .

    RPAREN          reduce using rule 14 (value -> LBR RBR .)
    COMMA           reduce using rule 14 (value -> LBR RBR .)
    RBR             reduce using rule 14 (value -> LBR RBR .)
    RCB             reduce using rule 14 (value -> LBR RBR .)


state 22

    (15) value -> LBR list . RBR
    (13) list -> list . COMMA value

    RBR             shift and go to state 29
    COMMA           shift and go to state 19


state 23

    (18) value -> LCB RCB .

    RPAREN          reduce using rule 18 (value -> LCB RCB .)
    COMMA           reduce using rule 18 (value -> LCB RCB .)
    RBR             reduce using rule 18 (value -> LCB RCB .)
    RCB             reduce using rule 18 (value -> LCB RCB .)


state 24

    (19) value -> LCB dict . RCB
    (17) dict -> dict . COMMA SYMBOL COLON value

    RCB             shift and go to state 30
    COMMA           shift and go to state 31


state 25

    (16) dict -> SYMBOL . COLON value

    COLON           shift and go to state 32


state 26

    (9) optsubs -> LCB events RCB .

    GT              reduce using rule 9 (optsubs -> LCB events RCB .)
    LT              reduce using rule 9 (optsubs -> LCB events RCB .)
    $end            reduce using rule 9 (optsubs -> LCB events RCB .)
    SYMBOL          reduce using rule 9 (optsubs -> LCB events RCB .)
    RCB             reduce using rule 9 (optsubs -> LCB events RCB .)


state 27

    (13) list -> list COMMA value .

    RPAREN          reduce using rule 13 (list -> list COMMA value .)
    COMMA           reduce using rule 13 (list -> list COMMA value .)
    RBR             reduce using rule 13 (list -> list COMMA value .)


state 28

    (11) value -> SYMBOL LPAREN list . RPAREN
    (13) list -> list . COMMA value

    RPAREN          shift and go to state 33
    COMMA           shift and go to state 19


state 29

    (15) value -> LBR list RBR .

    RPAREN          reduce using rule 15 (value -> LBR list RBR .)
    COMMA           reduce using rule 15 (value -> LBR list RBR .)
    RBR             reduce using rule 15 (value -> LBR list RBR .)
    RCB             reduce using rule 15 (value -> LBR list RBR .)


state 30

    (19) value -> LCB dict RCB .

    RPAREN          reduce using rule 19 (value -> LCB dict RCB .)
    COMMA           reduce using rule 19 (value -> LCB dict RCB .)
    RBR             reduce using rule 19 (value -> LCB dict RCB .)
    RCB             reduce using rule 19 (value -> LCB dict RCB .)


state 31

    (17) dict -> dict COMMA . SYMBOL COLON value

    SYMBOL          shift and go to state 34


state 32

    (16) dict -> SYMBOL COLON . value
    (10) value -> . SYMBOL
    (11) value -> . SYMBOL LPAREN list RPAREN
    (14) value -> . LBR RBR
    (15) value -> . LBR list RBR
    (18) value -> . LCB RCB
    (19) value -> . LCB dict RCB

    SYMBOL          shift and go to state 14
    LBR             shift and go to state 15
    LCB             shift and go to state 16

    value                          shift and go to state 35

state 33

    (11) value -> SYMBOL LPAREN list RPAREN .

    RPAREN          reduce using rule 11 (value -> SYMBOL LPAREN list RPAREN .)
    COMMA           reduce using rule 11 (value -> SYMBOL LPAREN list RPAREN .)
    RBR             reduce using rule 11 (value -> SYMBOL LPAREN list RPAREN .)
    RCB             reduce using rule 11 (value -> SYMBOL LPAREN list RPAREN .)


state 34

    (17) dict -> dict COMMA SYMBOL . COLON value

    COLON           shift and go to state 36


state 35

    (16) dict -> SYMBOL COLON value .

    RCB             reduce using rule 16 (dict -> SYMBOL COLON value .)
    COMMA           reduce using rule 16 (dict -> SYMBOL COLON value .)


state 36

    (17) dict -> dict COMMA SYMBOL COLON . value
    (10) value -> . SYMBOL
    (11) value -> . SYMBOL LPAREN list RPAREN
    (14) value -> . LBR RBR
    (15) value -> . LBR list RBR
    (18) value -> . LCB RCB
    (19) value -> . LCB dict RCB

    SYMBOL          shift and go to state 14
    LBR             shift and go to state 15
    LCB             shift and go to state 16

    value                          shift and go to state 37

state 37

    (17) dict -> dict COMMA SYMBOL COLON value .

    RCB             reduce using rule 17 (dict -> dict COMMA SYMBOL COLON value .)
    COMMA           reduce using rule 17 (dict -> dict COMMA SYMBOL COLON value .)

